feat: implement island management system with loading, saving, and vacant checks